--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev": "node --env-file=.env --watch --inspect ./src/server.js"
+    "dev": "node --env-file=.env --watch --inspect ./backend/src/server.js"
   },
   "keywords": [],
   "author": "",
@@ -14,6 +14,7 @@
     "@prisma/client": "^6.8.2",
     "cors": "^2.8.5",
     "express": "^5.1.0",
+    "mongodb": "^6.16.0",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
