--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev": "node --env-file=.env --watch --inspect ./backend/src/server.js"
+    "dev": "node --env-file=.env --watch --inspect ./backend/src/server.js",
+    "setup": "cd backend/src/models && npx prisma generate && npx prisma db push && cd ../../../ && node --env-file=.env ./backend/src/services/setup.js"
   },
   "keywords": [],
   "author": "",
