--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "validator": "^13.15.0",
+    "zod": "^3.25.28"
   },
   "devDependencies": {
     "prisma": "^6.8.2"
