--- a/admin-client/package.json
+++ b/admin-client/package.json
@@ -11,16 +11,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.0.1",
     "@tailwindcss/vite": "^4.1.7",
     "@tanstack/react-query": "^5.76.1",
     "axios": "^1.9.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-hook-form": "^7.56.4",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.0",
     "tailwindcss": "^4.1.7",
-    "zod": "^3.24.4",
+    "zod": "^3.25.36",
     "zustand": "^5.0.4"
   },
   "devDependencies": {
