--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "@hookform/resolvers": "^5.0.1",
-    "@prisma/client": "^6.8.2",
+    "@prisma/client": "^6.9.0",
     "@types/validator": "^13.15.1",
     "bcryptjs": "^3.0.2",
     "cookie-parser": "^1.4.7",
@@ -22,6 +22,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.16.0",
     "morgan": "^1.10.0",
+    "multer": "^2.0.1",
     "nodemailer": "^7.0.3",
     "passport": "^0.7.0",
     "passport-facebook": "^3.0.0",
@@ -32,6 +33,6 @@
     "zod": "^3.25.28"
   },
   "devDependencies": {
-    "prisma": "^6.8.2"
+    "prisma": "^6.9.0"
   }
 }
