--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "zod": "^3.25.28"
   },
   "devDependencies": {
+    "@types/express": "^5.0.3",
+    "@types/passport": "^1.0.17",
     "prisma": "^6.9.0"
   }
 }
