--- a/admin-client/package.json
+++ b/admin-client/package.json
@@ -21,14 +21,17 @@
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.0",
+    "slate": "^0.117.0",
+    "slate-react": "^0.117.1",
     "tailwindcss": "^4.1.7",
     "zod": "^3.25.36",
     "zustand": "^5.0.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
-    "@types/react": "^19.1.2",
+    "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.2",
+    "@types/slate": "^0.47.16",
     "@types/validator": "^13.15.1",
     "@vitejs/plugin-react": "^4.4.1",
     "eslint": "^9.25.0",
