--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "@hookform/resolvers": "^5.0.1",
-    "@prisma/client": "^6.9.0",
+    "@prisma/client": "^6.10.1",
     "@types/validator": "^13.15.1",
     "bcryptjs": "^3.0.2",
     "cookie-parser": "^1.4.7",
@@ -29,12 +29,13 @@
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
+    "slate": "^0.117.0",
     "validator": "^13.15.0",
     "zod": "^3.25.28"
   },
   "devDependencies": {
     "@types/express": "^5.0.3",
     "@types/passport": "^1.0.17",
-    "prisma": "^6.9.0"
+    "prisma": "^6.10.1"
   }
 }
